--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.0.1
 homepage: https://github.com/malikumair24800/my_python_plugin
 
 environment:
-  sdk: ^3.6.1
-  flutter: '>=3.3.0'
+  sdk: ">=3.6.1 <4.0.0"
+  flutter: ">=3.3.0"
 
 dependencies:
   flutter:
@@ -17,6 +17,12 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+flutter:
+  plugin:
+    platforms:
+      ios:
+        pluginClass: MyPythonPlugin
+        
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
